<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/resultTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="5dp" >

	    <TextView
	        style="@style/trainItemBLACK"
	        android:id="@+id/titleTrainType"
	        android:layout_weight="1.3"
	        android:text="@string/titleTrainType" />
	    <TextView
	        style="@style/trainItemBLACK"
	        android:id="@+id/titleDepInfo"
	        android:layout_weight="1"
	        android:text="@string/titleDepInfo" />
	    <TextView
	        style="@style/trainItemBLACK"
	        android:id="@+id/titleArrInfo"
	        android:layout_weight="1"
	        android:text="@string/titleArrInfo" />
	    <TextView
	        style="@style/trainItemBLACK"
	        android:id="@+id/titleDelayInfo"
	        android:layout_weight="1.2"
	        android:text="@string/titleDelayInfo" />
	</LinearLayout>
	
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C9C9"/>

    <com.praisehim.koraildelay.SwipeLibrary.SwipeRefreshLayout

	    android:id="@+id/refresher"
	    android:background="@drawable/refresh"
	    android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
	    
        <com.praisehim.koraildelay.SwipeLibrary.SwipeListView
		    android:id="@+id/trainListView"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:persistentDrawingCache="animation|scrolling"
			android:layoutAnimation="@anim/anim_layout_controller"
	        swipe:swipeFrontView="@+id/front"
	        swipe:swipeBackView="@+id/back"
	        swipe:swipeCloseAllItemsWhenMoveList="true"
	        swipe:swipeMode="both" />

	</com.praisehim.koraildelay.SwipeLibrary.SwipeRefreshLayout>

    
</LinearLayout>
