<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 열차종류 -->
    <LinearLayout
        android:id="@+id/trainTypeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="2dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:scaleType="fitCenter"
		    android:src="@drawable/train" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleTrainType" />
		<TextView
		    android:id="@+id/editTrainType"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp" />
    </LinearLayout>
    
    
    <!-- 날짜 -->
    <LinearLayout
        android:id="@+id/depDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="2dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:scaleType="fitCenter"
		    android:src="@drawable/calendar" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleDepDate" />
		<TextView
		    android:id="@+id/editDepDate"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <!-- 시간 -->
    <LinearLayout
        android:id="@+id/depTimeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="2dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:scaleType="fitCenter"
		    android:src="@drawable/clock" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleDepTime" />
		<TextView
		    android:id="@+id/editDepTime"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <!-- 승차역 -->
    <LinearLayout
        android:id="@+id/depStationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="2dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:src="@drawable/dep"
		    android:scaleType="fitXY" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleDepInfo" />
		<TextView
		    android:id="@+id/editDepStation"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <!-- 하차역 -->
    <LinearLayout
        android:id="@+id/arrStaionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="2dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:src="@drawable/arr"
		    android:scaleType="fitXY" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleArrInfo" />
		<TextView
		    android:id="@+id/editArrStation"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/titleSearchButton"
		android:textSize="23sp"
		android:gravity="center"
		android:background="@drawable/custom_button_click" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="@android:integer/config_mediumAnimTime"/>
</LinearLayout>
